Cambios en la accesibilidad

--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
     <meta name="robots" content="index, follow">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- Open Graph (Facebook, WhatsApp) -->
     <meta property="og:title" content="Complejo Guadalupe - Cabañas en Villa de Soto">
     <meta property="og:description"
         content="Disfruta de una estadía única en nuestras cabañas en Villa de Soto, Córdoba. Un entorno natural perfecto para relajarte.">
@@ -20,18 +18,16 @@
     <meta property="og:url" content="https://complejoguadalupe.netlify.app/">
     <meta property="og:image" content="https://i.imgur.com/QGIC2cz.jpeg">
     <meta property="og:type" content="website">
-
-    <!-- Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Complejo Guadalupe - Cabañas en Villa de Soto">
     <meta name="twitter:description"
         content="Cabañas acogedoras en Villa de Soto, Córdoba. Naturaleza, descanso y aventura te esperan.">
     <meta name="twitter:image" content="https://i.imgur.com/QGIC2cz.jpeg">
 
-    <link rel="icon" href="./img/logo-imgur.jpg" type="image/jpg">
-    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <link rel="icon" href="./img/logo-imgur.ico">
+    <script defer src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <script>
+    <script defer>
         emailjs.init('Esfk6SMNHFs8Za8x1');
     </script>
     <link rel="stylesheet" href="./css/styles.css">
@@ -41,12 +37,9 @@
     <div class="container__icon-wpp">
         <ion-icon name="logo-whatsapp" class="icon-wpp pulse"></ion-icon>
     </div>
-    <!-- Header -->
     <header>
         <div class="container-header">
-            <!-- Logo -->
-            <img src="./img/logo.png" alt="logo de la página" class="logo" id="inicio">
-            <!-- Navigation -->
+            <img src="./img/logo.webp" alt="logo de la página" class="logo" id="inicio">
             <nav>
                 <ul class="nav-links">
                     <li><a href="#servicios" class="scroll-link">Servicios</a></li>
@@ -71,12 +64,10 @@
                     </div>
                 </ul>
             </nav>
-            <!-- Info Reserva -->
             <div class="contact-info">
                 <span><ion-icon name="call-outline"></ion-icon>351 73-70866</span>
                 <button class="btn-reserva"><a href="#contacto" class="scroll-link">Reservar Ahora</a></button>
             </div>
-            <!-- Menu hamburguesa -->
             <div class="menu-toggle">
                 <span></span>
                 <span></span>
@@ -85,7 +76,6 @@
         </div>
     </header>
     <main>
-        <!-- Hero Section -->
         <section class="hero">
             <div class="container-hero">
                 <div class="hero-text">
@@ -98,7 +88,6 @@
             </div>
             <ion-icon name="chevron-down-outline" class="arrow-down"></ion-icon>
         </section>
-        <!-- Nuestros Servicios -->
         <section class="services-section" id="servicios">
             <div class="order-heading">
                 <h2 class="heading-subtitle animate" data-animation="fade-down">Nuestros Servicios</h2>
@@ -111,76 +100,71 @@
             </div>
             <div class="services-container">
                 <div class="service-card hidden">
-                    <img src="./icons/wifi-3d.png" alt="icono de wifi" class="img-services">
+                    <img src="./icons/wifi-3d.webp" alt="icono de wi-fi" class="img-services">
                     <h3>WiFi</h3>
                     <p>Disponemos de Wi-Fi de <b>alta calidad</b> en cada cabaña.</p>
                 </div>
                 <div class="service-card hidden">
-                    <img src="./icons/piscina.png" alt="icono de piscina" class="img-services">
+                    <img src="./icons/piscina.webp" alt="icono de piscina" class="img-services">
                     <h3>Pileta</h3>
                     <p><b>Disfruta</b> de la pileta para refrescarte y compartir momentos inolvidables.</p>
                 </div>
                 <div class="service-card hidden">
-                    <img src="./icons/cama.png" alt="icono de piscina" class="img-services">
+                    <img src="./icons/cama.webp" alt="icono de una cama" class="img-services">
                     <h3>Habitaciones</h3>
                     <p>Cada cabaña cuenta con <b>dos habitaciones</b>: una con cama matrimonial y otra con tres
                         camas individuales.</p>
                 </div>
                 <div class="service-card hidden">
-                    <img src="./icons/aire-acondicionado.png" alt="icono de aire acondicionado" class="img-services">
+                    <img src="./icons/aire-acondicionado.webp" alt="icono de aire acondicionado" class="img-services">
                     <h3>Aire Acondicionado</h3>
                     <p>Aire acondicionado en todas las cabañas para un <b>descanso placentero</b>.</p>
                 </div>
                 <div class="service-card hidden">
-                    <img src="./icons/television-inteligente.png" alt="icono de una television smart"
+                    <img src="./icons/television-inteligente.webp" alt="icono de una television smart"
                         class="img-services">
                     <h3>TV por Cable</h3>
                     <p>LCD 32" con amplia <b>variedad</b> de canales.</p>
                 </div>
                 <div class="service-card hidden">
-                    <img src="./icons/cocina.png" alt="icono de una cocina completa" class="img-services">
+                    <img src="./icons/cocina.webp" alt="icono de una cocina completa" class="img-services">
                     <h3>Cocina y Equipamiento</h3>
                     <p>Totalmente <b>equipada</b> con horno, pava, heladera, termotanque eléctrico, utensilios de cocina
                         y elementos de
                         limpieza.</p>
                 </div>
                 <div class="service-card hidden">
-                    <img src="./icons/servicio-de-habitaciones.png"
+                    <img src="./icons/servicio-de-habitaciones.webp"
                         alt="icono de una persona realizando el servicio de habitacion" class="img-services">
                     <h3>Ropa de Cama</h3>
                     <p><b>Proveemos</b> sábanas y frazadas para garantizar tu comodidad durante la estadía.</p>
                 </div>
                 <div class="service-card hidden">
-                    <img src="./icons/cochera.png" alt="icono de una cochera" class="img-services">
+                    <img src="./icons/cochera.webp" alt="icono de una cochera" class="img-services">
                     <h3>Cochera</h3>
                     <p>Cada cabaña cuenta con un garaje techado y privado.</p>
                 </div>
                 <div class="service-card hidden">
-                    <img src="./icons/parrilla-de-ladrillo.png" alt="icono de una persona con un asador"
+                    <img src="./icons/parrilla-de-ladrillo.webp" alt="icono de una persona en un asador"
                         class="img-services">
                     <h3>Asador</h3>
                     <p>Un asador ideal para compartir <b>momentos especiales</b> con familia y amigos.</p>
                 </div>
             </div>
         </section>
-        <!-- Galeria -->
         <section class="gallery" id="galeria">
             <div class="slider">
                 <button onclick="changeImage(-1)" class="nav-btn" id="prevBtn">❮</button>
-                <img id="mainImage" onclick="openModal()" alt="Imagen principal">
+                <img id="mainImage" onclick="openModal()" alt="Carrousel de imagenes de las cabañas">
                 <button onclick="changeImage(1)" class="nav-btn" id="nextBtn">❯</button>
             </div>
         </section>
-
-        <!-- Modal -->
         <div id="imageModal" class="modal oculto">
             <span class="close" onclick="closeModal()">&times;</span>
             <img class="modal-content" id="modalImage">
             <button class="nav-btn" id="prevModalBtn" onclick="changeImage(-1)">❮</button>
             <button class="nav-btn" id="nextModalBtn" onclick="changeImage(1)">❯</button>
         </div>
-
-        <!-- Acerca de Villa de Soto -->
         <section class="acerca-de-section" id="acerca-de">
             <div class="order-heading">
                 <h2 class="heading-subtitle animate" data-animation="fade-down">Sobre Villa de Soto</h2>
@@ -200,10 +184,9 @@
                     170 km de Córdoba
                     capital, y a 900 km de Buenos Aires.</p>
             </div>
-            <!-- Lugares turísticos -->
             <div class="lugares-turisticos-grid">
                 <div class="lugar-turistico animate" data-animation="fade-up" data-delay="600">
-                    <img src="./img/san-roque.jpg" loading="lazy" alt="La Iglesia de Villa de Soto">
+                    <img src="./img/san-roque.webp" loading="lazy" alt="La Iglesia de Villa de Soto">
                     <div class="order__content-turistico">
                         <h3>Santuario San Roque</h3>
                         <p>Destaca su Parroquia, centro de la Fiesta Patronal en honor a San Roque, que convoca a miles
@@ -212,7 +195,7 @@
                     </div>
                 </div>
                 <div class="lugar-turistico animate" data-animation="fade-up" data-delay="700">
-                    <img src="./img/ollita-la-toma.jpg" loading="lazy" alt="El Balneario La Toma">
+                    <img src="./img/ollita-la-toma.webp" loading="lazy" alt="El Balneario La Toma">
                     <div class="order__content-turistico">
                         <h3>La Toma</h3>
                         <p>Balneario natural con ollas, cascadas y playitas de arena fina, ideal para el descanso y el
@@ -220,17 +203,15 @@
                     </div>
                 </div>
                 <div class="lugar-turistico animate" data-animation="fade-up" data-delay="800">
-                    <img src="./img/plaza-vista-de-arriba.jpg" loading="lazy" alt="La Plaza de Villa de Soto">
+                    <img src="./img/plaza-vista-de-arriba.webp" loading="lazy" alt="La Plaza de Villa de Soto">
                     <div class="order__content-turistico">
                         <h3>La Plaza</h3>
                         <p>Plaza principal rodeada de árboles y locales gastronómicos, perfecta para disfrutar de un
                             momento con amigos y familia.</p>
                     </div>
                 </div>
-
-                <!-- Fesstividades -->
                 <div class="lugar-turistico animate" data-animation="fade-up" data-delay="900">
-                    <img src="./img-events/Festival-de-la-Serenata.jpg" loading="lazy"
+                    <img src="./img-events/Festival-de-la-Serenata.webp" loading="lazy"
                         alt="El Festival de la Serenata es un evento anual en Villa de Soto que celebra la tradición y la música, destacando el patrimonio cultural local en un entorno natural.">
                     <div class="order__content-turistico">
                         <h3>Festival de la Serenata</h3>
@@ -241,9 +222,8 @@
                         </p>
                     </div>
                 </div>
-
                 <div class="lugar-turistico animate" data-animation="fade-down" data-delay="1000">
-                    <img src="./img-events/Paseo-de-los-Artesanos.jpg" loading="lazy"
+                    <img src="./img-events/Paseo-de-los-Artesanos.webp" loading="lazy"
                         alt="Paseo de los artesanos en plaza San Roque">
                     <div class="order__content-turistico">
                         <h3>Paseo de los Artesanos</h3>
@@ -251,9 +231,8 @@
                             ambiente cultural y acogedor.</p>
                     </div>
                 </div>
-
                 <div class="lugar-turistico animate" data-animation="fade-down" data-delay="1100">
-                    <img src="./img-events/Fiesta-Cervecera.jpg" loading="lazy"
+                    <img src="./img-events/Fiesta-Cervecera.webp" loading="lazy"
                         alt="Fiesta de la cerveza y food trucks en un marco perfecto para reunirnos, compartir y celebrar.">
                     <div class="order__content-turistico">
                         <h3>Fiesta Cervecera</h3>
@@ -262,9 +241,8 @@
                             festivo.</p>
                     </div>
                 </div>
-
                 <div class="lugar-turistico animate" data-animation="fade-down" data-delay="1200">
-                    <img src="./img-events/Carnavales.jpg" loading="lazy"
+                    <img src="./img-events/Carnavales.webp" loading="lazy"
                         alt="Jornada inolvidable llena de color, música y alegría. Las comparsas deslumbraron con su energía, las bandas musicales hicieron vibrar al público, y los foodtrucks, puestos de ventas y artesanos ofrecieron una gran variedad de propuestas para disfrutar.">
                     <div class="order__content-turistico">
                         <h3>Carnaval del Pueblo</h3>
@@ -272,7 +250,7 @@
                     </div>
                 </div>
                 <div class="lugar-turistico animate" data-animation="fade-down" data-delay="1300">
-                    <img src="./img-events/Sendero-de-la-Cruz.jpg" loading="lazy"
+                    <img src="./img-events/Sendero-de-la-Cruz.webp" loading="lazy"
                         alt="Sendero de la Cruz en Villa de Soto, ubicado en el Balneario La Toma">
                     <div class="order__content-turistico">
                         <h3>Sendero de la Cruz</h3>
@@ -283,9 +261,7 @@
                 </div>
             </div>
         </section>
-
         </section>
-        <!-- Contacto -->
         <section class="container-contacto" id="contacto">
             <div class="order-heading">
                 <h2 class="heading-contact animate" data-animation="fade-down" data-delay="200">Contacto
@@ -305,7 +281,6 @@
                                 name="call-outline"></ion-icon>351-2292235</p>
                         <p class="animate" data-animation="fade-up" data-delay="1100"><ion-icon
                                 name="mail-outline"></ion-icon>complejoguadalupevds@gmail.com</p>
-
                         <div class="socials-contact">
                             <a class="animate" href="https://www.instagram.com/complejoguadalupe/" target="_blank"
                                 data-animation="fade-up" data-delay="1200"><ion-icon
@@ -322,33 +297,25 @@
                         </iframe>
                     </div>
                 </div>
-
                 <div class="form-reserva animate" data-animation="fade-right" data-delay="1800">
                     <h3 class="sub-heading-contact animate" data-animation="fade-right" data-delay="400">Reserva tu
                         Cabaña</h3>
                     <form id="reservaForm">
                         <label for="nombre">Nombre Completo:</label>
                         <input type="text" id="nombre" placeholder="Ingresa tu nombre completo" required>
-
                         <label for="email">Correo Electrónico:</label>
                         <input type="email" id="email" placeholder="Ingresa tu correo electrónico">
-
                         <label for="telefono">Teléfono:</label>
                         <input type="tel" id="telefono" placeholder="Ingresa tu número de télefono" required>
-
                         <label for="fechaEntrada">Fecha de Llegada:</label>
                         <input type="date" id="fechaEntrada" required>
-
                         <label for="fechaSalida">Fecha de Salida:</label>
                         <input type="date" id="fechaSalida" required>
-
                         <label for="personas">Cantidad de Personas:</label>
                         <input type="number" id="personas" min="1" max="5" required>
-
                         <label for="mensaje">¿Alguna Pregunta?</label>
                         <textarea id="mensaje" rows="3" placeholder="Deja tú mensaje..." maxlength="250"></textarea>
                         <p id="contador">250 caracteres restantes</p>
-
                         <button type="submit" id="button">Reservar Ahora</button>
                         <p id="error" class="error"></p>
                     </form>
@@ -374,7 +341,6 @@
             </section>
         </footer>
     </footer>
-    <!-- Firebase y Firestore -->
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js";
         import { getFirestore, collection, addDoc, Timestamp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-firestore.js";
@@ -396,9 +362,9 @@
         window.addDoc = addDoc;
         window.collection = collection;
     </script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script defer type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script defer type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script defer nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="./javascript/app.js"></script>
 </body>
 
