--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@
                         </p>
                     </div>
                     <div class="paragraphs-nosotros animate" data-animation="fade-up" data-delay="800">
+                        <p>El Complejo Guadalupe ofrece una experiencia única en conexión con la
+                            naturaleza, disfrutando
+                            de la calidez de
+                            nuestras cabañas, donde el bienestar son nuestra prioridad.</p>
                         <p>
                             Contamos
                             con 5
@@ -123,14 +127,7 @@
                         <p>A solo una cuadra del río y a seis del centro, la plaza principal y la
                             iglesia, nuestra
                             ubicación te
-                            ofrece el equilibrio perfecto entre tranquilidad y comodidad, sin perder la facilidad de
-                            ir
-                            al
-                            centro cuando lo desees.</p>
-                        <p>El Complejo Guadalupe ofrece una experiencia única en conexión con la
-                            naturaleza, disfrutando
-                            de la calidez de
-                            nuestras cabañas, donde la comodidad y el bienestar son nuestra prioridad.</p>
+                            ofrece el equilibrio perfecto entre tranquilidad y comodidad.</p>
                     </div>
                 </div>
             </div>
