Nav y Footer fix

--- a/index.html
+++ b/index.html
@@ -427,9 +427,11 @@
         <footer class="container__footer">
             <div class="list__links">
                 <a href="#inicio" class="scroll-link">Inicio</a>
+                <a href="#nosotros" class="scroll-link">Nosotros</a>
                 <a href="#servicios" class="scroll-link">Servicios</a>
                 <a href="#galeria" class="scroll-link">Galeria</a>
                 <a href="#acerca-de" class="scroll-link">Acerca de</a>
+                <a href="#testimonios" class="scroll-link">Testimonios</a>
                 <a href="#contacto" class="scroll-link">Contacto</a>
             </div>
             <div class="divider"></div>
